lblAllFields = in all fields

[Changed]
- Web; added field selection for the search
- Quick search now correctl seatches on boolean values as well

--------------------------------------------------------------------
Data Crow version 5.0                         Released on 2025-04-29
--------------------------------------------------------------------

[New]
- Picture management has been completed changed; Data Crow now allows for unlimited number of pictures to be added.
- A completely new web version has been created. Start the server using the startup parameters and navigate to: http://<web server IP address>:<web server port>

[Changed]
- Add from memory for pictures now also allowed URLs to be pasted.
- Removed the memory usage message from the log; only shown now using the -debug option.
- Edit as New; external references will no longer be copied as well as online service update information (as it is incorrect source documentation).
- Create item; when the item form is accidentally closed Data Crow does not warn the user - it just closes the item form and all changes are lost.
- Larger pictures in the quick view description panel (max 500x400).
- Added image server address as a parameter (optional).
- Certain processes in Data Crow were too actively checking for things to do; lowered the polling frequency.
- Improved the preview for the find and replace.
- Improved the find and replace regular expression support.
- Added failed login message if credentials are incorrect.
- Added clear option to the update all form.
- On startup the report versions (based on modification date) are checked against the systems reports. If the system reports are newer, the reports in the user folder are updated.
- Also added the picture preview pane to the icon browser.
- Create Multiple now adds items in top to bottom order.
- Scrolling performance has been significantly improved for the card list.
- Performance improvements for client-server mode have been made.